--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,9 +83,8 @@ nav ul li a{
 
 nav ul li a:hover{
     color: #C4ED05;
-    letter-spacing: 1rem;
-    transition: 2s ease-out;
-    background-color: #E01010;
+    letter-spacing: 0.2rem;
+    transition: 0.5s ease-out;
 }
   
 nav ul li .dropdown {
@@ -120,4 +119,37 @@ nav ul li .dropdown {
     height: 100vh;
     background-position: center;
     background-size: cover;
+}
+
+nav ul li button{
+    background-color: #0f919b;
+    color: #CC5500;
+    border: none;
+    display: block;
+    width: 100%;
+    cursor: pointer;
+    font-size: 0.8rem;
+    padding: 0.4rem;
+    transition: 0.5s ease-in;
+    position: relative;
+    border-radius: 4px;
+}
+
+nav ul li button::before{
+    position: absolute;
+    content: '';
+    inset: 2px;
+    /* background: #fff; */
+}
+
+ nav ul li button:hover{
+    color: #042123;
+    letter-spacing: 0.2rem;
+    background-color: #1e9bff;
+    box-shadow: 0 0 35px #1e9bff;
+}
+
+nav ul li button:focus{
+    outline: none;
+    background-color: #042123;
 }
