--- a/assets/css/aboutus.css
+++ b/assets/css/aboutus.css
@@ -4,9 +4,9 @@
     box-sizing: border-box;
 }
 body{
-    background:fixed;
-    background-repeat: none;
-    background-size:auto;
+    width: 100vw;
+    height: 100vh;
+
 }
 .container{
     display: flex;
