--- a/assets/css/aboutus.css
+++ b/assets/css/aboutus.css
@@ -6,7 +6,7 @@
 body{
     width: 100vw;
     height: 100vh;
-
+    position: relative;
 }
 .container{
     display: flex;
@@ -41,4 +41,7 @@ body{
     color: white;
     background-color: rgb(24, 23, 23);
     border-radius: 10px;
+}
+#more{
+    display: none;
 }
