--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -30,11 +30,21 @@ body{
     display: flex;
     justify-content: center;
 }
-#error-txt, #pass-error,#email-error{
+#error-txt, #pass-error,#email-error,#pass-el{
     display: none;
     width: 350px;
     background-color: rgba(255,69,0, 0.3);
     color: darkred;
+    text-align: center;
+    padding: 10px;
+    margin: 12px;
+    margin-left: 100px;
+}
+#success-el{
+    display: none;
+    width: 350px;
+    background-color: rgba(50,205,50, 0.2);
+    color: darkgreen;
     text-align: center;
     padding: 10px;
     margin: 12px;
@@ -93,4 +103,26 @@ button:hover{
     border: 2px solid blue;
     background: white;
     cursor: pointer;
+}
+.hide{
+    display: none;
+}
+.passwords i{
+    position: absolute;
+    padding: 25px;
+    padding-right: 120px;
+}
+.names i{
+    position: absolute;
+    padding: 25px;
+    padding-right: 120px;
+}
+.contacts i{
+    position: absolute;
+    padding: 25px;
+    padding-right: 120px;
+}
+.icon {
+    padding: 10px;
+    min-width: 40px;
 }
