--- a/assets/css/id.css
+++ b/assets/css/id.css
@@ -4,8 +4,33 @@
     box-sizing: border-box;
 }
 body{
-    height: 100vh;
-    width: 100%;
+
+}
+.nav{
+    display: flex;
+    justify-content: flex-end;
+    padding: 20px;
+    margin: 10px;
+    background-color:#4C4A18;
+    color: white;
+    height: 150px;
+}
+.nav ul{
+    margin-top:30px;
+}
+.nav li{
+    display: inline;
+    margin: 20px;
+    border: 1px solid white;
+    padding: 12px;
+    border-radius: 10px;
+
+}
+.identity h1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 25px;
 }
 .header{
     display: flex;
@@ -71,6 +96,7 @@ section{
     margin:10% 0 0 30%;
     border: none;
     transform: rotate3d(180deg);
+    color: white;
 }
 
 .container button a{
