--- a/assets/css/aboutus.css
+++ b/assets/css/aboutus.css
@@ -8,6 +8,26 @@ body{
     background-repeat: none;
     background-size:auto;
 }
+
+.nav{
+    display: flex;
+    justify-content: flex-end;
+    padding: 20px;
+    background-color:#042123;
+    color: white;
+    height: 150px;
+}
+.nav ul{
+    margin-top:30px;
+}
+.nav li{
+    display: inline;
+    margin: 20px;
+    border: 1px solid white;
+    padding: 12px;
+    border-radius: 10px;
+
+}
 .container{
     display: flex;
     justify-content: space-around;
