--- a/assets/css/contactus.css
+++ b/assets/css/contactus.css
@@ -6,6 +6,24 @@ body{
     background-image: url("../images/world.jpg");
     height: 100vh;
 }
+.nav{
+    display: flex;
+    justify-content: flex-end;
+    padding: 20px;
+    margin: 10px;
+    color: white;
+    height: 150px;
+}
+.nav ul{
+    margin-top:30px;
+}
+.nav li{
+    display: inline;
+    border: 1px solid white;
+    padding: 12px;
+    border-radius: 10px;
+
+}
 .container{
     display: flex;
     justify-content: space-around;
