--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,18 +159,24 @@ nav ul li button:focus{
     background-color: #042123;
 }
 
-.title-text{
-    text-align: center;
-    padding-bottom: 70px;
+footer{
+    padding: 40px 0;
+    background: #042123;
+    position: relative;
 }
 
-.title-text p{
+footer .title-text{
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+footer .title-text p{
     margin: auto;
     font-size: 20px;
-    color: #ffffff;
     font-weight: bold;
     position: relative;
     z-index: 1;
+    color: white;
     display: inline-block;
 }
 
@@ -190,89 +196,123 @@ nav ul li button:focus{
 
 .title-text h1{
     font-size: 50px;
-}
-
-footer{
-    padding:100px 0 20px;
-    background:#4d4a18;
-    position: relative;
-    color: white;
-}
-
-.footer-row{
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.footer-left, .footer-right{
-    flex-basis: 45%;
-    padding: 10px;
-    margin-bottom: 20px;
-}
-
-.footer-right{
-    text-align: right;
-}
-
-.footer-row h1{
-    margin: 10px 0;
-}
-
-.footer-row p{
-    line-height: 35px;
-}
-
-.footer-left, .footer-right .fa{
-    font-size: 20px;
-    color: #042123;
-    margin: 10px;
-}
-
-.footer-img{
-    max-width: 370px;
-    opacity: 0.1;
-    position: absolute;
-    left: 50%;
-    top: 35%;
-    transform: translate(-50%, -50%);
-}
-
-.social-links{
-    text-align: center;
-}
-
-.social-links .fa{
-    height: 40px;
-    width: 40px;
-    font-size: 20px;
-    line-height: 40px;
-    border: 1px solid #042123;
-    margin: 40px 5px 0;
-    color: #042123;
-    cursor: pointer;
-    transition: .8s;
-}
-
-.social-links .fa:hover{
-    background: #042123;
     color: #fff;
-    transform: translateY(-7px);
-}
-
-.social-links p{
-    font-size: 12px;
-    margin-top: 20px;
 }
 
 @media screen and (max-width:770px){
-    .footer-left,.footer-right{
-        flex-basis: 100%;
-        font-size: 14px;
-    }
-    .footer-img{
-        top: 25%;
+    .title-text h1{
+        font-size: 35px;
     }
 }
+
+footer .container{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: 0 50px;
+}
+
+footer .container .sec{
+    margin-right: 30px;
+}
+
+
+footer .container .aboutus{
+    width: 40%;
+}
+  
+footer .container h2{
+    position: relative;
+    color: #fff;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+footer .container h2:before{
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 50px;
+    height: 2px;
+    background: rgb(0, 217, 255);
+}
+
+footer p{
+    color: #999;
+}
+
+.contact{
+    width:cal(35% - 60px);
+    margin-right: 0 !important;
+}
+
+.contact .info{
+    position: relative;
+}
+
+.contact .info li{
+    display: flex;
+    margin-bottom: 16px;
+}
+  
+.contact .info li span :nth-child(1){
+    color: #fff;
+    font-size: 20px;
+    margin-right: 10px;
+}
+
+.contact .info li span{
+    color: #999;
+}
+  
+.contact .info li a{
+    color: #999;
+    text-decoration: none;
+}
+  
+.contact .info li a:hover{
+    color:#fff;
+}
+
+.com-with-us p{
+    text-align: center;
+    padding-top: 20px;
+}
+
+.smi{
+    margin-top: 20px;
+    display: flex;
+    margin-left: 550px;
+}
+  
+.smi li{
+    list-style:none;
+  }
+  
+.smi li a{
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background: #222;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+    text-decoration: none;
+    border-radius: 4px;
+}
+  
+.smi li a:hover{
+    background: rgb(5, 21, 248);
+}
+  
+  .link1 a:hover {
+    background-color: orangered;
+  }
+  
+  .smi li a i{
+    color:#fff;
+    font-size: 20px;
+  } 
