--- a/assets/css/aboutus.css
+++ b/assets/css/aboutus.css
@@ -65,3 +65,26 @@ body{
 #more{
     display: none;
 }
+.logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 25%;
+    margin: auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.logo h1 p{
+    width:50px;
+    margin: 20px;
+    padding: 35px;
+}
+.logo p{
+    text-decoration: none;
+    font-weight: 100;
+    font-size: 20px;
+}
+.logo h1 {
+    margin-bottom: 10px;
+}
