finishing up with the navbar and footer

--- a/assets/css/aboutus.css
+++ b/assets/css/aboutus.css
@@ -88,3 +88,154 @@ body{
 .logo h1 {
     margin-bottom: 10px;
 }
+footer .title-textt{
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+footer .title-textt p{
+    margin: auto;
+    font-size: 20px;
+    font-weight: bold;
+    position: relative;
+    z-index: 1;
+    color: white;
+    display: inline-block;
+}
+
+.title-textt p::after{
+    content: '';
+    width: 50px;
+    height: 35px;
+    background: linear-gradient(#042123, #fff);
+    position: absolute;
+    top: -20px;
+    left: 0;
+    z-index: -1;
+    transition: rotate(10deg);
+    border-top-left-radius: 35px;
+    border-bottom-right-radius: 35px;
+}
+
+.title-textt h1{
+    font-size: 50px;
+    color: #fff;
+}
+
+@media screen and (max-width:770px){
+    .title-textt h1{
+        font-size: 35px;
+    }
+}
+
+footer .containerr{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: 0 50px;
+}
+
+footer .container .seco{
+    margin-right: 30px;
+}
+
+
+footer .container .aboutuss{
+    width: 40%;
+}
+  
+footer .containerr h2{
+    position: relative;
+    color: #fff;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+footer .containerr h2:before{
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 50px;
+    height: 2px;
+    background: rgb(0, 217, 255);
+}
+
+footer p{
+    color: #999;
+}
+
+.contactt{
+    width:cal(35% - 60px);
+    margin-right: 0 !important;
+}
+
+.contactt .info{
+    position: relative;
+}
+
+.contactt .info li{
+    display: flex;
+    margin-bottom: 13px;
+}
+  
+.contactt .info li span :nth-child(1){
+    color: #fff;
+    font-size: 20px;
+    margin-right: 10px;
+}
+
+.contactt .info li span{
+    color: #999;
+}
+  
+.contactt .info li a{
+    color: #999;
+    text-decoration: none;
+}
+  
+.contactt .info li a:hover{
+    color:#fff;
+}
+
+.comm-with-us p{
+    text-align: center;
+    margin-left: 25px;
+}
+
+.smii{
+    margin-top: 20px;
+    display: flex;
+    margin-left: 570px;
+}
+  
+.smii li{
+    list-style:none;
+  }
+  
+.smii li a{
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background: #222;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+    text-decoration: none;
+    border-radius: 4px;
+}
+  
+.smii li a:hover{
+    background: rgb(5, 21, 248);
+}
+  
+.link2 a:hover {
+    background-color: orangered;
+}
+  
+.smii li a i{
+    color:#fff;
+    font-size: 20px;
+}
