--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,6 +162,113 @@ nav ul li button:focus{
     display: none;
 }
 
+/* .slider-frame{
+    overflow: hidden;
+    height: 500px;
+    width: 800px;
+    margin-left: 250px;
+}
+
+@-webkit-keyframes slide_animation{
+    0%{
+        left:0px;
+    }
+    10%{
+        left:0px;
+    }
+    20%{
+        left:1200px;
+    }
+    30%{
+        left:1200px;
+    }
+    40%{
+        left:2400px;
+    }
+    50%{
+        left:2400px;
+    }
+    60%{
+        left:1200px;
+    }
+    70%{
+        left:1200px;
+    }
+    80%{
+        left:0px;
+    }
+    90%{
+        left:0px;
+    }
+    100%{
+        left:0px;
+    }
+}
+
+.slider-images{
+    width: 3600px;
+    height: 800px;
+    margin: 0 0 0 -550px;
+    position: relative;
+    -webkit-animation-name: slide_animation;
+    -webkit-animation-duration: 33s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+    -webkit-animation-play-state: running;
+}
+
+.img-container{
+    height: 800px;
+    width: 700px;
+    position: relative;
+    float: left;
+    margin-top: 200px;
+}
+
+.img-container img{
+    width: 600px;
+    height: 400px;
+} */
+
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+    padding-top: 150px;
+}
+  
+.dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+  
+.active {
+    background-color: #717171;
+}
+  
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+.fade img{
+    height: 480px;
+}
+  
+@keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+}
+  
+@media only screen and (max-width: 300px) {
+    .text {font-size: 11px}
+}
+
 footer{
     padding: 40px 0;
     background: #042123;
