--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -14,11 +14,12 @@ body{
     width: 650px;
     margin: 20vh;
     margin-left: 400px;
-    background: #CFBACD;
+    background: white;
     box-shadow: 5px 5px 5px gray;
     border-radius: 50px;
 }
 .container h1{
+    color: #042123;
     font-size: 35px;
     display: flex;
     justify-content: center;
@@ -38,7 +39,7 @@ body{
     text-align: center;
     padding: 10px;
     margin: 12px;
-    margin-left: 100px;
+    margin-left: 160px;
 }
 #success-el{
     display: none;
@@ -48,7 +49,7 @@ body{
     text-align: center;
     padding: 10px;
     margin: 12px;
-    margin-left: 100px;
+    margin-left: 160px;
 }
 input{
     border-radius: 12px;
@@ -75,7 +76,7 @@ button{
     font-weight: 600;
     border: 0;
     color: aliceblue;
-    background: blue;
+    background: #042123;
     border-radius: 12px;
 }
 .deets{
