--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -31,7 +31,7 @@ body{
     display: flex;
     justify-content: center;
 }
-#error-txt, #pass-error,#email-error,#pass-el{
+#error-txt, #pass-error,#email-error,#pass-el, #pass-error,#mail-error{
     display: none;
     width: 350px;
     background-color: rgba(255,69,0, 0.3);
