--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,19 +7,16 @@
     list-style: none;
     text-decoration: none;
 }
-
 body{
     width: 100vw;
     height: 100vh;
 
 }
-
 .header{
-    background: #07252d;
+    background: #031e25;
     padding-bottom: 1.25rem;
     width: 100%;
 }
-
 .header header{
     display: flex;
     width: 100%;
@@ -167,74 +164,6 @@ nav ul li button:focus{
 .hide{
     display: none;
 }
-
-/* .slider-frame{
-    overflow: hidden;
-    height: 500px;
-    width: 800px;
-    margin-left: 250px;
-}
-
-@-webkit-keyframes slide_animation{
-    0%{
-        left:0px;
-    }
-    10%{
-        left:0px;
-    }
-    20%{
-        left:1200px;
-    }
-    30%{
-        left:1200px;
-    }
-    40%{
-        left:2400px;
-    }
-    50%{
-        left:2400px;
-    }
-    60%{
-        left:1200px;
-    }
-    70%{
-        left:1200px;
-    }
-    80%{
-        left:0px;
-    }
-    90%{
-        left:0px;
-    }
-    100%{
-        left:0px;
-    }
-}
-
-.slider-images{
-    width: 3600px;
-    height: 800px;
-    margin: 0 0 0 -550px;
-    position: relative;
-    -webkit-animation-name: slide_animation;
-    -webkit-animation-duration: 33s;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-direction: alternate;
-    -webkit-animation-play-state: running;
-}
-
-.img-container{
-    height: 800px;
-    width: 700px;
-    position: relative;
-    float: left;
-    margin-top: 200px;
-}
-
-.img-container img{
-    width: 600px;
-    height: 400px;
-} */
 
 .slideshow-container {
     max-width: 1000px;
