--- a/assets/css/aboutus.css
+++ b/assets/css/aboutus.css
@@ -23,6 +23,27 @@ body{
 .nav ul{
     margin-top:30px;
 }
+.nav h2{
+    position: relative;
+    font-size: 25px;
+    margin-right: 30px;
+    margin-top: 30px;
+    color: #0e3742;
+    text-transform: uppercase;
+    width: 100%;
+    text-align: center;
+    -webkit-box-reflect: below -42px linear-gradient(transparent, #0004)
+}
+
+.nav h2 span{
+    animation: animate 5s linear infinite;
+    font-size: 40px;
+    font-weight: bolder;
+}
+
+.nav h2 span:nth-child(even){
+    animation-delay: 0.4s;
+}
 .nav li{
     display: inline;
     margin: 20px;
